Bug 89628 - [all]igt/kms_addfb/addfb25-bad-modifier causes *ERROR* Unsupported fb modifier 0xffffffffffffffff!
Summary: [all]igt/kms_addfb/addfb25-bad-modifier causes *ERROR* Unsupported fb modifie...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-18 05:56 UTC by lu hua
Modified: 2017-10-06 14:30 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (115.89 KB, text/plain)
2015-03-18 05:56 UTC, lu hua
no flags Details

Description lu hua 2015-03-18 05:56:16 UTC
Created attachment 114417 [details]
dmesg

[reply] [−] Description lu hua 2015-03-18 05:31:32 UTC
Created attachment 114415 [details]
dmesg

==System Environment==
--------------------------
Regression:  not sure, new case in recently.

no-working platforms: all

==kernel==
--------------------------
drm-intel-nightly/3753ea527e539d3358a6368e77cb29ecb2e71c42
commit 3753ea527e539d3358a6368e77cb29ecb2e71c42
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Tue Mar 17 22:36:04 2015 +0100

    drm-intel-nightly: 2015y-03m-17d-21h-35m-20s UTC integration manifest

==Bug detailed description==
-----------------------------
It causes <3>[   90.004628] [drm:intel_framebuffer_init [i915]] *ERROR* Unsupported fb modifier 0xffffffffffffffff!.

output:
IGT-Version: 1.10-g505645c (x86_64) (Linux: 4.0.0-rc4_drm-intel-nightly_3753ea_20150318+ x86_64)
Subtest addfb25-bad-modifier: SUCCESS (0.000s)

==Reproduce steps==
---------------------------- 
1. ./kms_addfb --run-subtest addfb25-bad-modifier
Comment 1 Jesse Barnes 2015-03-23 19:45:27 UTC
Should be fixed by:

http://lists.freedesktop.org/archives/intel-gfx/2015-March/062842.html
Comment 2 lu hua 2015-03-25 03:23:09 UTC
(In reply to Jesse Barnes from comment #1)
> Should be fixed by:
> 
> http://lists.freedesktop.org/archives/intel-gfx/2015-March/062842.html

Test it on BSW, fixed by this patch.
Comment 3 Jesse Barnes 2015-03-25 15:44:45 UTC
commit 4d6cb99c04142d286d0be2dedbe05a5bcf8fa148
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Mon Mar 23 12:43:50 2015 -0700

    drm/i915: make unsupported fb modifier message DRM_DEBUG
Comment 4 lu hua 2015-03-26 03:18:45 UTC
Verified.fixed.
Comment 5 Elizabeth 2017-10-06 14:30:56 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.